frontend/src/index.css
@import url('https://fonts.googleapis.com/css2?family=Calistoga&family=Gaegu&family=Quicksand:wght@300..700&family=Zain:ital,wght@0,200;0,300;0,400;0,700;0,800;0,900;1,300;1,400&display=swap');
@import "tailwindcss";


@theme {
    /* THEME 1: Blue / Yellow / Red*/
    --color-primary: oklch(0.905 0.182 98.111);
    --color-button: oklch(0.849 0.158 97.399);
    --color-background: var(--color-sky-900);
    --color-accent: #ff4e30;
    --color-green: oklch(0.766 0.118 145.295);
    --color-footer: var(--color-primary);
    --color-text: var(--color-background);
    /**/
    /* THEME 2: Green / Yellow / Red*/
    /*--color-primary: #ffab00;*/
    /*--color-button: var(--color-primary);*/
    /*--color-background: #008aa1;*/
    /*--color-accent: #00592e;*/
    /*--color-footer: var(--color-sky-950);*/
    /*--color-text: var(--color-sky-900);*/
    /**/
    /* FONTS */
    --font-gaegu: 'Gaegu', sans-serif;
    --font-zain: 'Zain', sans-serif;
    --font-calistoga: 'Calistoga', serif;
}

:root {
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}


* {
    @apply box-border;
    /*border: red 1px solid;*/
}

html {
    scrollbar-color: rgba(255, 255, 255, 0.2) transparent; /* thumb track */
    scrollbar-gutter: stable;
    scrollbar-width: thin; /* Firefox */
    -webkit-text-size-adjust: 100%;
    text-size-adjust: 100%;
    @apply h-full p-0 m-0;
}

::-webkit-scrollbar {
    width: 6px;
}

::-webkit-scrollbar-track {
    background: transparent;
}

::-webkit-scrollbar-thumb {
    background: rgba(255, 255, 255, 0.2);
    border-radius: 999px;
}

::-webkit-scrollbar-thumb:hover {
    background: rgba(255, 255, 255, 0.35);
}

body {
    @apply min-h-dvh p-0 m-0;
}

#root {
    @apply min-h-dvh p-0 m-0;
}

.cl-socialButtonsBlockButton:hover {
    background-color: #f5f5f5 !important;
    border-color: #dadce0 !important;
}

.cl-footer > :last-child {
    display: none !important;
}

